--- a/index.html
+++ b/index.html
@@ -39,12 +39,33 @@
             <button class="button-2">Sign up</button>
         </div>
     </header>
-    <section></section>
+    <section>
+        <div class="b1">
+            <button class="button-3">Over 3 millions ready-to-work creatives!</button>
+            <h1>The world's destination<br>for desgin</h1>
+            <p class="p2">Get inspired by the work of millions of top-rated designers & agencies around the world.</p>
+            <button class="button-4">Get Started</button>
+        </div>
+        <div class="b2">
+
+        </div>
+        <div class="b3">
+            <p class="p3">Explore inspiring desgins</p>
+            <button class="button-5">Browse more Inspiration</button>
+        </div>
+        <div class="b4">
+            <p class="p4">Find your next<br>desginer today</p>
+            <p class="p5">The world's leading brands using Dribbble to hire creative talent.<br>Browse millions of top-rated protfolios to find your perfect<br>creative match.</p>
+            <button class="button-6">Get started now</button>
+            <button class="button-7">Learn about hiring</button>
+            <p class="p6" style="font-size: 25px;">Are you a designer?<a href="#" style="text-decoration: underline; font-size: 25px; background-color: rgb(227, 189, 94);;">Join Dribble</a> </p>
+        </div>
+    </section>
     <footer>
         <div class="container">
-            <div class="box">
+            <div class="box-1">
                 <div class="title">
-                    <p>Dribbble</p>
+                    <p class="p-2">Dribbble</p>
                 </div>
                 <ul class="list-2">
                     <li class="l2"><a href="#">For desginers</a></li>
@@ -63,20 +84,20 @@
                     <i class="fa-brands fa-pinterest"></i>
                 </ul>
             </div>
-            <div class="box">
+            <div class="box-2">
                 <ul class="list-3">
-                   <li class="l3"><a href="#">@ 2024 Dribbble</a></li> 
-                   <li class="l3"><a href="#">Terms</a></li>
-                   <li class="l3"><a href="#">Privacy</a></li>
-                   <li class="l3"><a href="#">Cookies</a></li>
+                   <li class="l3"><a href="#" style="color: gray;">@ 2024 Dribbble</a></li> 
+                   <li class="l3"><a href="#" style="color: gray;">Terms</a></li>
+                   <li class="l3"><a href="#" style="color: gray;">Privacy</a></li>
+                   <li class="l3"><a href="#" style="color: gray;">Cookies</a></li>
                 </ul>
                 <ul class="list-4">
-                    <li class="l4"><a href="#">Jobs</a></li>
-                    <li class="l4"><a href="#">Desginers</a></li>
-                    <li class="l4"><a href="#">Freelancer</a></li>
-                    <li class="l4"><a href="#">Tags</a></li>
-                    <li class="l4"><a href="#">Places</a></li>
-                    <li class="l4"><a href="#">Resources</a></li>
+                    <li class="l4"><a href="#" style="color: gray;">Jobs</a></li>
+                    <li class="l4"><a href="#" style="color: gray;">Desginers</a></li>
+                    <li class="l4"><a href="#" style="color: gray;">Freelancer</a></li>
+                    <li class="l4"><a href="#" style="color: gray;">Tags</a></li>
+                    <li class="l4"><a href="#" style="color: gray;">Places</a></li>
+                    <li class="l4"><a href="#" style="color: gray;">Resources</a></li>
                 </ul>
             </div>
         </div>
