--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Pacifico&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Document</title>
 </head>
@@ -18,11 +22,16 @@
         <ul class="list-1">
             <li class="l1"><a href="#">Find desginers <i class="fa-solid fa-caret-down"></i></a>
                 <ul class="sub-list-1" type="none">
-                    <li><a href="#"><p style="background-color: white; color:gray; font-size: 15px;">Desginer Search</p>
-                        <p style="background-color: white;font-size: 10px; color: gray;">Quickly find your next desginer</p></li>
-                    <li><a href="#"><p style="background-color: white; color:gray; font-size: 15px;">Post a job<br>
-                        <p style="background-color: white;font-size: 10px; color: gray;">The #1 job for desgin talent</p>
-                    </a></li>
+                    <li><a href="#">
+                            <p style="background-color: white; color:gray; font-size: 15px;">Desginer Search</p>
+                            <p style="background-color: white;font-size: 10px; color: gray;">Quickly find your next
+                                desginer</p>
+                    </li>
+                    <li><a href="#">
+                            <p style="background-color: white; color:gray; font-size: 15px;">Post a job<br>
+                                <p style="background-color: white;font-size: 10px; color: gray;">The #1 job for desgin
+                                    talent</p>
+                        </a></li>
                 </ul>
             </li>
             <li class="l1"><a href="#">Inspiration</a></li>
@@ -46,8 +55,251 @@
             <p class="p2">Get inspired by the work of millions of top-rated designers & agencies around the world.</p>
             <button class="button-4">Get Started</button>
         </div>
-        <div class="b2">
-
+        <div class="slider">
+            <div class="slider-track">
+                <div class="profile-card">
+                    <img src="images/img-1.jpeg" alt="Andrea Jelić" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Andrea Jelić</h2>
+                        <p>Digital Designer</p>
+                        <div class="profile-buttons">
+                            <button>Brand</button>
+                            <button>UI</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+               
+                <div class="profile-card">
+                    <img src="images/img-2.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-3.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-4.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/imh-5.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-6.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-7.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-8.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-9.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-10.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-1.jpeg" alt="Andrea Jelić" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Andrea Jelić</h2>
+                        <p>Digital Designer</p>
+                        <div class="profile-buttons">
+                            <button>Brand</button>
+                            <button>UI</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+               
+                <div class="profile-card">
+                    <img src="images/img-2.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-3.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-4.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/imh-5.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-6.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-7.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-8.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-9.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="profile-card">
+                    <img src="images/img-10.jpeg" alt="Another Designer" class="profile-image">
+                    <div class="profile-details">
+                        <h2>Another Designer</h2>
+                        <p>UI/UX Designer</p>
+                        <div class="profile-buttons">
+                            <button>Design</button>
+                            <button>UX</button>
+                            <button>Web</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="b3">
             <p class="p3">Explore inspiring desgins</p>
@@ -55,10 +307,13 @@
         </div>
         <div class="b4">
             <p class="p4">Find your next<br>desginer today</p>
-            <p class="p5">The world's leading brands using Dribbble to hire creative talent.<br>Browse millions of top-rated protfolios to find your perfect<br>creative match.</p>
+            <p class="p5">The world's leading brands using Dribbble to hire creative talent.<br>Browse millions of
+                top-rated protfolios to find your perfect<br>creative match.</p>
             <button class="button-6">Get started now</button>
             <button class="button-7">Learn about hiring</button>
-            <p class="p6" style="font-size: 25px;">Are you a designer?<a href="#" style="text-decoration: underline; font-size: 25px; background-color: rgb(227, 189, 94);;">Join Dribble</a> </p>
+            <p class="p6" style="font-size: 25px;">Are you a designer?<a href="#"
+                    style="text-decoration: underline; font-size: 25px; background-color: rgb(227, 189, 94);;">Join
+                    Dribble</a> </p>
         </div>
     </section>
     <footer>
@@ -86,10 +341,10 @@
             </div>
             <div class="box-2">
                 <ul class="list-3">
-                   <li class="l3"><a href="#" style="color: gray;">@ 2024 Dribbble</a></li> 
-                   <li class="l3"><a href="#" style="color: gray;">Terms</a></li>
-                   <li class="l3"><a href="#" style="color: gray;">Privacy</a></li>
-                   <li class="l3"><a href="#" style="color: gray;">Cookies</a></li>
+                    <li class="l3"><a href="#" style="color: gray;">@ 2024 Dribbble</a></li>
+                    <li class="l3"><a href="#" style="color: gray;">Terms</a></li>
+                    <li class="l3"><a href="#" style="color: gray;">Privacy</a></li>
+                    <li class="l3"><a href="#" style="color: gray;">Cookies</a></li>
                 </ul>
                 <ul class="list-4">
                     <li class="l4"><a href="#" style="color: gray;">Jobs</a></li>
