--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                 </div>
-               
+
                 <div class="profile-card">
                     <img src="images/img-2.jpeg" alt="Another Designer" class="profile-image">
                     <div class="profile-details">
@@ -190,7 +190,7 @@
                         </div>
                     </div>
                 </div>
-               
+
                 <div class="profile-card">
                     <img src="images/img-2.jpeg" alt="Another Designer" class="profile-image">
                     <div class="profile-details">
@@ -303,6 +303,301 @@
         </div>
         <div class="b3">
             <p class="p3">Explore inspiring desgins</p>
+        </div>
+        <div class="gallery">
+            <div class="gallery-section">
+                <img src="images/g1.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>52</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>330</p>
+
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g2.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>20</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g3.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g4.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g5.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g6.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g7.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g8.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g10.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g11.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g12.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g13.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g14.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g15.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g16.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g17.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g18.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g19.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g20.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g21.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g22.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g23.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g24.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+            <div class="gallery-section">
+                <img src="images/g25.jpeg" class="g1"><br>
+                <div class="details">
+                    <i class="fa-solid fa-user"></i>
+                    <p>User Name</p>
+                    <button class="gb">Team</button>
+                    <i class="fa-regular fa-heart"></i>
+                    <p>50</p>
+                    <i class="fa-regular fa-eye"></i>
+                    <p>50</p>
+                </div>
+            </div>
+        </div>
+        <div class="b3">
             <button class="button-5">Browse more Inspiration</button>
         </div>
         <div class="b4">
@@ -314,6 +609,31 @@
             <p class="p6" style="font-size: 25px;">Are you a designer?<a href="#"
                     style="text-decoration: underline; font-size: 25px; background-color: rgb(227, 189, 94);;">Join
                     Dribble</a> </p>
+        </div>
+        <div class="slider">
+            <div class="slider-track">
+                <div class="profile-card">
+                    <img src="images/t1.jpeg" class="profile-image">
+                </div>
+                <div class="profile-card">
+                    <img src="images/t2.jpeg" class="profile-image">
+                </div>
+                <div class="profile-card">
+                    <img src="images/t3.jpeg" class="profile-image">
+                </div>
+                <div class="profile-card">
+                    <img src="images/t4.jpeg" class="profile-image">
+                </div>
+                <div class="profile-card">
+                    <img src="images/t5.jpeg" class="profile-image">
+                </div>
+                <div class="profile-card">
+                    <img src="images/t6.jpeg" class="profile-image">
+                </div>
+                <div class="profile-card">
+                    <img src="images/t8.jpeg" class="profile-image">
+                </div>
+            </div>
         </div>
     </section>
     <footer>
